@@ -1,31 +1,37 @@
 /*
- * MIT License
+ * Copyright 2022 Adobe
+ * All Rights Reserved.
  *
- * © Copyright 2020 Adobe. All rights reserved.
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ * NOTICE: Adobe permits you to use, modify, and distribute this file in
+ * accordance with the terms of the Adobe license agreement accompanying
+ * it.
  */
 package com.adobe.campaign.tests.logparser.core;
+
+import com.adobe.campaign.tests.logparser.exceptions.IncorrectParseDefinitionException;
+import com.adobe.campaign.tests.logparser.exceptions.LogDataExportToFileException;
+import com.adobe.campaign.tests.logparser.exceptions.LogParserPostManipulationException;
+import com.adobe.campaign.tests.logparser.utils.HTMLReportUtils;
+import com.adobe.campaign.tests.logparser.utils.LogParserFileUtils;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.apache.commons.csv.CSVFormat;
+import org.apache.commons.csv.CSVPrinter;
+import org.apache.commons.io.FileUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.hamcrest.Matcher;
+import org.hamcrest.Matchers;
 
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
-
-import com.adobe.campaign.tests.logparser.exceptions.LogDataExportToFileException;
-import org.apache.commons.csv.CSVFormat;
-import org.apache.commons.csv.CSVPrinter;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
-import com.adobe.campaign.tests.logparser.exceptions.IncorrectParseDefinitionException;
+import java.util.stream.Collectors;
 
 /**
  * The main log object that contains the log information
+ *
  * @param <T> The log information is always of the type @{@link StdLogEntry}
  */
 public class LogData<T extends StdLogEntry> {
@@ -48,6 +54,7 @@ public class LogData<T extends StdLogEntry> {
 
     /**
      * A map of String and @{@link StdLogEntry}
+     *
      * @param in_logMap A Map of generated Keys and @{@link StdLogEntry data}
      */
     public LogData(Map<String, T> in_logMap) {
@@ -69,14 +76,12 @@ public class LogData<T extends StdLogEntry> {
     }
 
     /**
-     * This method adds an entry to the log data. If the entry already exists we
-     * just increment the frequence
+     * This method adds an entry to the log data. If the entry already exists we just increment the frequence
      * <p>
      * Author : gandomi
      * <p>
-     * @param lt_cubeEntry
-     *        An object of the type {@link StdLogEntry}
      *
+     * @param lt_cubeEntry An object of the type {@link StdLogEntry}
      */
     public void addEntry(T lt_cubeEntry) {
 
@@ -91,34 +96,27 @@ public class LogData<T extends StdLogEntry> {
     }
 
     /**
-     * This method allows you to access an entry in the log data. For this you
-     * need the key of the Data
+     * This method allows you to access an entry in the log data. For this you need the key of the Data
      * <p>
      * Author : gandomi
      *
-     * @param in_dataEntryKey
-     *        The key with which the data has been stored
+     * @param in_dataEntryKey The key with which the data has been stored
      * @return The StdLogEntry for the given entry. null if not found
-     *
      */
     public T get(String in_dataEntryKey) {
         return this.getEntries().get(in_dataEntryKey);
     }
 
     /**
-     * This method allows you to access a value within the cube map. For this
-     * you need the key of the Data and the title of the value
+     * This method allows you to access a value within the cube map. For this you need the key of the Data and the title
+     * of the value
      * <p>
      * Author : gandomi
      *
-     * @param in_dataEntryKey
-     *        The key with which the data has been stored
-     * @param in_valueKey
-     *        The identity of the value.
+     * @param in_dataEntryKey The key with which the data has been stored
+     * @param in_valueKey     The identity of the value.
      * @return The key value for the given entry. null if not found
-     * @throws IncorrectParseDefinitionException
-     *         If the given valueKey was not found in the definition
-     *
+     * @throws IncorrectParseDefinitionException If the given valueKey was not found in the definition
      */
     public Object get(String in_dataEntryKey, String in_valueKey) throws IncorrectParseDefinitionException {
 
@@ -138,21 +136,15 @@ public class LogData<T extends StdLogEntry> {
     }
 
     /**
-     * This method allows you to change a specific value in the log data. For
-     * this, you need the key and the parse definition title to find the value
+     * This method allows you to change a specific value in the log data. For this, you need the key and the parse
+     * definition title to find the value
      * <p>
      * Author : gandomi
      *
-     * @param in_dataEntryKey
-     *        The key with which the data has been stored
-     * @param in_valueKey
-     *        The identity of the value.
-     * @param in_newValue
-     *        The new value of the entry value
-     * @throws IncorrectParseDefinitionException
-     *         When there is no entry for the given in_dataEntryKey and
-     *         in_valueKey
-     *
+     * @param in_dataEntryKey The key with which the data has been stored
+     * @param in_valueKey     The identity of the value.
+     * @param in_newValue     The new value of the entry value
+     * @throws IncorrectParseDefinitionException When there is no entry for the given in_dataEntryKey and in_valueKey
      */
     public void put(String in_dataEntryKey, String in_valueKey, Object in_newValue)
             throws IncorrectParseDefinitionException {
@@ -175,83 +167,61 @@ public class LogData<T extends StdLogEntry> {
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj)
+        if (this == obj) {
             return true;
-        if (obj == null)
+        }
+        if (obj == null) {
             return false;
-        if (getClass() != obj.getClass())
+        }
+        if (getClass() != obj.getClass()) {
             return false;
+        }
         LogData<?> other = (LogData<?>) obj;
         if (entries == null) {
-            if (other.entries != null)
+            if (other.entries != null) {
                 return false;
-        } else if (!entries.equals(other.entries))
+            }
+        } else if (!entries.equals(other.entries)) {
             return false;
+        }
         return true;
     }
 
     /**
-     * Here we create a new LogDataObject with the given ParseDefinitionEntry.
-     * This method performs a groupby for the given value. The frequence will
-     * also take into account the original frequence
+     * Here we create a new LogDataObject with the given ParseDefinitionEntry. This method performs a groupby for the
+     * given value. The frequence will also take into account the original frequence
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionEntryKey
-     *        The key name of the parse definition perform the GroupBy on
-     * @param in_transformationClass
-     *        The class to which we should transform the cube data
-     * @param <U>
-     *        The return type of the group by cube.
+     * @param in_parseDefinitionEntryKey The key name of the parse definition perform the GroupBy on
+     * @param in_transformationClass     The class to which we should transform the cube data
+     * @param <U>                        The return type of the group by cube.
      * @return a new LogData Object containing the groupBy values
-     * @throws IncorrectParseDefinitionException
-     *         If the key is not in the ParseDefinitions of the Log data entry
-     * @throws IllegalAccessException
-     *         if the class or its nullary constructor is not accessible.
-     * @throws InstantiationException
-     *         if this {@code Class} represents an abstract class, an interface,
-     *         an array class, a primitive type, or void; or if the class has no
-     *         nullary constructor; or if the instantiation fails for some other
-     *         reason.
-     *
+     * @throws IncorrectParseDefinitionException If the key is not in the ParseDefinitions of the Log data entry
      */
-    public <U extends StdLogEntry> LogData<U> groupBy(String in_parseDefinitionEntryKey,
+     <U extends StdLogEntry> LogData<U> groupBy(String in_parseDefinitionEntryKey,
             Class<U> in_transformationClass)
-            throws IncorrectParseDefinitionException, InstantiationException, IllegalAccessException {
+            throws IncorrectParseDefinitionException {
 
-        return groupBy(Arrays.asList(in_parseDefinitionEntryKey), in_transformationClass);
+        return groupBy(Collections.singletonList(in_parseDefinitionEntryKey), in_transformationClass);
     }
 
     /**
-     * Here we create a new LogDataObject with the given ParseDefinitionEntry.
-     * This method performs a groupby for the given value. The frequence will
-     * also take into account the original frequence
+     * Here we create a new LogDataObject with the given ParseDefinitionEntry. This method performs a groupby for the
+     * given value. The frequence will also take into account the original frequence
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionEntryKeyList
-     *        The list of key names of the parse definition perform the GroupBy
-     *        on
-     * @param in_transformationClass
-     *        The class to which we should transform the cube data
-     * @param <U>
-     *        The return type of the group by cube.
+     * @param in_parseDefinitionEntryKeyList The list of key names of the parse definition perform the GroupBy on
+     * @param in_transformationClass         The class to which we should transform the cube data
+     * @param <U>                            The return type of the group by cube.
      * @return a new LogData Object containing the groupBy values
-     * @throws IncorrectParseDefinitionException
-     *         If the key is not in the ParseDefinitions of the Log data entry
-     * @throws IllegalAccessException
-     *         if the class or its nullary constructor is not accessible.
-     * @throws InstantiationException
-     *         if this {@code Class} represents an abstract class, an interface,
-     *         an array class, a primitive type, or void; or if the class has no
-     *         nullary constructor; or if the instantiation fails for some other
-     *         reason.
-     *
+     * @throws IncorrectParseDefinitionException If the key is not in the ParseDefinitions of the Log data entry
      */
-    public <U extends StdLogEntry> LogData<U> groupBy(List<String> in_parseDefinitionEntryKeyList,
+    <U extends StdLogEntry> LogData<U> groupBy(List<String> in_parseDefinitionEntryKeyList,
             Class<U> in_transformationClass)
-            throws IncorrectParseDefinitionException, InstantiationException, IllegalAccessException {
-        LogData<U> lr_cubeData = new LogData<U>();
+            throws IncorrectParseDefinitionException {
+        LogData<U> lr_cubeData = new LogData<>();
 
         //Creating new Definition
         ParseDefinition l_cubeDefinition = new ParseDefinition(
@@ -264,11 +234,17 @@ public class LogData<T extends StdLogEntry> {
         //Filling STDLogData
         for (T lt_entry : getEntries().values()) {
             Map<String, String> lt_cubeEntryValues = new HashMap<>();
-            U lt_cubeEntry = in_transformationClass.newInstance();
+            U lt_cubeEntry = null;
+            try {
+                lt_cubeEntry = in_transformationClass.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+                throw new LogParserPostManipulationException("Problem creating new host for our new grouping.", e);
+            }
             lt_cubeEntry.setParseDefinition(l_cubeDefinition);
 
             for (String lt_parseDefinitionEntryKey : in_parseDefinitionEntryKeyList) {
-                if (!lt_entry.getParseDefinition().fetchHeaders().contains(lt_parseDefinitionEntryKey)) {
+                //Merge with original headers
+                if (!lt_entry.fetchHeaders().contains(lt_parseDefinitionEntryKey)) {
                     throw new IncorrectParseDefinitionException("The given header name "
                             + lt_parseDefinitionEntryKey + " was not among the stored data");
                 }
@@ -286,55 +262,32 @@ public class LogData<T extends StdLogEntry> {
     }
 
     /**
-     * Here we create a new LogDataObject with the given ParseDefinitionEntry.
-     * This method performs a groupby for the given value. The frequence will
-     * also take into account the original frequence
+     * Here we create a new LogDataObject with the given ParseDefinitionEntry. This method performs a groupby for the
+     * given value. The frequence will also take into account the original frequence
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionEntryKeyList
-     *        The list of key names of the parse definition perform the GroupBy
-     *        on
+     * @param in_parseDefinitionEntryKeyList The list of key names of the parse definition perform the GroupBy on
      * @return a new LogData Object containing the groupBy values
-     * @throws IncorrectParseDefinitionException
-     *         If the key is not in the ParseDefinitions of the Log data entry
-     * @throws IllegalAccessException
-     *         if the class or its nullary constructor is not accessible.
-     * @throws InstantiationException
-     *         if this {@code Class} represents an abstract class, an interface,
-     *         an array class, a primitive type, or void; or if the class has no
-     *         nullary constructor; or if the instantiation fails for some other
-     *         reason.
-     *
+     * @throws IncorrectParseDefinitionException If the key is not in the ParseDefinitions of the Log data entry
      */
     public LogData<GenericEntry> groupBy(List<String> in_parseDefinitionEntryKeyList)
-            throws InstantiationException, IllegalAccessException, IncorrectParseDefinitionException {
+            throws IncorrectParseDefinitionException {
         return groupBy(in_parseDefinitionEntryKeyList, GenericEntry.class);
     }
 
     /**
-     * Here we create a new LogDataObject with the given ParseDefinitionEntry.
-     * This method performs a groupby for the given value. The frequence will
-     * also take into account the original frequence
+     * Here we create a new LogDataObject with the given ParseDefinitionEntry. This method performs a groupby for the
+     * given value. The frequence will also take into account the original frequence
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionEntryKey
-     *        The key name of the parse definition perform the GroupBy on
+     * @param in_parseDefinitionEntryKey The key name of the parse definition perform the GroupBy on
      * @return a new LogData Object containing the groupBy values
-     * @throws IncorrectParseDefinitionException
-     *         If the key is not in the ParseDefinitions of the Log data entry
-     * @throws IllegalAccessException
-     *         if the class or its nullary constructor is not accessible.
-     * @throws InstantiationException
-     *         if this {@code Class} represents an abstract class, an interface,
-     *         an array class, a primitive type, or void; or if the class has no
-     *         nullary constructor; or if the instantiation fails for some other
-     *         reason.
-     *
+     * @throws IncorrectParseDefinitionException If the key is not in the ParseDefinitions of the Log data entry
      */
     public LogData<GenericEntry> groupBy(String in_parseDefinitionEntryKey)
-            throws InstantiationException, IllegalAccessException, IncorrectParseDefinitionException {
+            throws IncorrectParseDefinitionException {
         return groupBy(in_parseDefinitionEntryKey, GenericEntry.class);
     }
 
@@ -343,13 +296,10 @@ public class LogData<T extends StdLogEntry> {
      * <p>
      * Author : gandomi
      *
-     * @param in_filterKeyValues
-     *        A map of &lt;String,Object&gt; representation the values we want
-     *        to find
+     * @param in_filterKeyValues A map of &lt;String,Matcher&gt; representation the values we want to find
      * @return a new LogDataObject containing only the filtered values
-     *
      */
-    public LogData<T> filterBy(Map<String, Object> in_filterKeyValues) {
+    public LogData<T> filterBy(Map<String, Matcher> in_filterKeyValues) {
         LogData<T> lr_filteredLogData = new LogData<>();
 
         for (String lt_logDataKey : this.getEntries().keySet()) {
@@ -362,21 +312,16 @@ public class LogData<T extends StdLogEntry> {
     }
 
     /**
-     * This method searches the LogData for an enry with a specific value for a
-     * parse definition entry name
+     * This method searches the LogData for an entry with a specific value for a parse definition entry name
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionName
-     *        The name of the parse definition entry under which we search for a
-     *        value
-     * @param in_searchValue
-     *        The search value
+     * @param in_parseDefinitionName The name of the parse definition entry under which we search for a value
+     * @param in_searchValue         The matcher
      * @return a new LogDataObject containing only the searched values
-     *
      */
-    public LogData<T> searchEntries(String in_parseDefinitionName, String in_searchValue) {
-        Map<String, Object> l_filterProperties = new HashMap<>();
+    public LogData<T> searchEntries(String in_parseDefinitionName, Matcher in_searchValue) {
+        Map<String, Matcher> l_filterProperties = new HashMap<>();
         l_filterProperties.put(in_parseDefinitionName, in_searchValue);
 
         return this.filterBy(l_filterProperties);
@@ -387,13 +332,10 @@ public class LogData<T extends StdLogEntry> {
      * <p>
      * Author : gandomi
      *
-     * @param in_searchKeyValues
-     *        A map of &lt;String,Object&gt; representation the values we want
-     *        to find
+     * @param in_searchKeyValues A map of &lt;String,Matcher&gt; representation the values we want to find
      * @return a new LogDataObject containing only the filtered values
-     *
      */
-    public LogData<T> searchEntries(Map<String, Object> in_searchKeyValues) {
+    public LogData<T> searchEntries(Map<String, Matcher> in_searchKeyValues) {
 
         return filterBy(in_searchKeyValues);
     }
@@ -403,17 +345,13 @@ public class LogData<T extends StdLogEntry> {
      * <p>
      * Author : gandomi
      *
-     * @param in_parseDefinitionName
-     *        The name of the parse definition entry under which we search for a
-     *        value
-     * @param in_searchValue
-     *        The search value
+     * @param in_parseDefinitionName The name of the parse definition entry under which we search for a value
+     * @param in_searchValue         The search value
      * @return true if the search terms could be found. Otherwise false
-     *
      */
     public boolean isEntryPresent(String in_parseDefinitionName, String in_searchValue) {
-        Map<String, Object> l_searchProperties = new HashMap<>();
-        l_searchProperties.put(in_parseDefinitionName, in_searchValue);
+        Map<String, Matcher> l_searchProperties = new HashMap<>();
+        l_searchProperties.put(in_parseDefinitionName, Matchers.equalTo(in_searchValue));
 
         return isEntryPresent(l_searchProperties);
     }
@@ -423,12 +361,10 @@ public class LogData<T extends StdLogEntry> {
      * <p>
      * Author : gandomi
      *
-     * @param in_searchKeyValues A map of &lt;String,Object&gt; representation the values we want
-     *        to find
+     * @param in_searchKeyValues A map of &lt;String,Object&gt; representation the values we want to find
      * @return true if the search terms could be found. Otherwise false
-     *
      */
-    public boolean isEntryPresent(Map<String, Object> in_searchKeyValues) {
+    public boolean isEntryPresent(Map<String, Matcher> in_searchKeyValues) {
         return searchEntries(in_searchKeyValues).getEntries().size() > 0;
     }
 
@@ -437,50 +373,280 @@ public class LogData<T extends StdLogEntry> {
      * Definition as the name
      *
      * @return a CSV file containing the LogData
+     * @throws LogDataExportToFileException If the file could not be exported
      */
     public File exportLogDataToCSV() throws LogDataExportToFileException {
-        Optional<T> l_firstEntry = this.getEntries().values().stream().findFirst();
+        T l_firstEntry = this.fetchFirst();
 
-        if (l_firstEntry.isPresent()) {
-            return exportLogDataToCSV(l_firstEntry.get().fetchStoredHeaders(), l_firstEntry.get().getParseDefinition()
+        if (l_firstEntry != null) {
+            return exportLogDataToCSV(l_firstEntry.fetchHeaders(), l_firstEntry.getParseDefinition()
                     .fetchEscapedTitle()
                     + "-export.csv");
         } else {
             log.warn("No Log data to export. Please load the log data before re-attempting");
-            return new File("Non-ExistingFile");
+            return null;
         }
 
     }
 
     /**
-     * Exports the current LogData to a CSV file.
-     *
-     * @param in_headerSet A set of headers to be used as keys for exporting
-     * @param in_csvFileName The file name to export
+     * Exports the current LogData to a standard CSV file with a name you give. By default the file will have an escaped version of the Parse
+     * @param in_fileName a filename to store the CSV export
      * @return a CSV file containing the LogData
      */
-    public File exportLogDataToCSV(Set<String> in_headerSet, String in_csvFileName)
-            throws LogDataExportToFileException {
-        File l_exportFile = new File(in_csvFileName);
+    public File exportLogDataToCSV(String in_fileName) {
+        T l_firstEntry = this.fetchFirst();
 
-        if (l_exportFile.exists()) {
-            log.info("Deleting existing log export file {}...", in_csvFileName);
-            if (!l_exportFile.delete()) {
-                throw new LogDataExportToFileException("We were unable to delete the file "+ l_exportFile.getPath());
-            }
+        if (l_firstEntry != null) {
+            return exportLogDataToCSV(l_firstEntry.fetchHeaders(), in_fileName);
+        } else {
+            log.warn("No Log data to export. Please load the log data before re-attempting");
+            return null;
         }
+    }
 
-        try (CSVPrinter printer = new CSVPrinter(new FileWriter(in_csvFileName), CSVFormat.DEFAULT)) {
+    /**
+     * Exports the current LogData to a CSV file.
+     *
+     * @param in_headerSet   A set of headers to be used as keys for exporting
+     * @param in_csvFileName The file name to export
+     * @return a CSV file containing the LogData
+     * @throws LogDataExportToFileException If the file could not be exported
+     */
+    public File exportLogDataToCSV(Collection<String> in_headerSet, String in_csvFileName)
+            throws LogDataExportToFileException {
+        File l_exportFile = LogParserFileUtils.createNewFile(in_csvFileName);
+
+        try (CSVPrinter printer = new CSVPrinter(new FileWriter(l_exportFile), CSVFormat.DEFAULT)) {
             printer.printRecord(in_headerSet);
 
             for (StdLogEntry lt_entry : this.getEntries().values()) {
-                printer.printRecord(lt_entry.fetchValuesAsList());
+                Map lt_values = lt_entry.fetchValueMapPrintable();
+                printer.printRecord(in_headerSet.stream().map(h -> lt_values.get(h)).collect(Collectors.toList()));
             }
 
         } catch (IOException ex) {
             throw new LogDataExportToFileException("Encountered error while exporting the log data to a CSV file.", ex);
         }
 
-        return new File(in_csvFileName);
+        return l_exportFile;
+    }
+
+    /**
+     * Exports the current LogData to an HTML file as a table. The headers will be extracted directly from the entries.
+     *
+     * @param in_reportTitle The title of the report
+     * @param in_htmlFileName The file name to export
+     * @return an HTML file containing the LogData as a table
+     */
+    public File exportLogDataToHTML(String in_reportTitle, String in_htmlFileName) {
+        T l_firstEntry = this.fetchFirst();
+
+        if (l_firstEntry == null) {
+            log.error("No Log data to export. Please load the log data before re-attempting");
+            return null;
+        }
+        return exportLogDataToHTML(l_firstEntry.fetchHeaders(), in_reportTitle,
+                in_htmlFileName);
+    }
+
+    /**
+     * Exports the current LogData to an HTML file as a table.
+     *
+     * @param in_headerSet   A set of headers to be used as keys for exporting
+     * @param in_reportTitle The title of the report
+     * @param in_htmlFileName The file name to export
+     * @return an HTML file containing the LogData as a table
+     */
+    public File exportLogDataToHTML(Collection<String> in_headerSet, String in_reportTitle, String in_htmlFileName) {
+        File l_exportFile = LogParserFileUtils.createNewFile(in_htmlFileName);
+
+        try {
+            StringBuilder sb = new StringBuilder();
+            sb.append(HTMLReportUtils.fetchSTDPageStart("diffTable.css"));
+            //Creating the overview report
+            sb.append(HTMLReportUtils.fetchHeader(1, in_reportTitle));
+            sb.append("Here is an listing of out findings.");
+            sb.append(HTMLReportUtils.fetchTableStartBracket());
+            sb.append(HTMLReportUtils.fetchTableHeaders(in_headerSet));
+            sb.append("<tbody>");
+
+            for (StdLogEntry lt_entry : this.getEntries().values()) {
+                Map lt_values = lt_entry.fetchValueMapPrintable();
+                sb.append(HTMLReportUtils.ROW_START);
+                in_headerSet.stream().map(h -> lt_values.get(h)).forEach(j -> sb.append(HTMLReportUtils.fetchCell_TD(j)));
+                sb.append(HTMLReportUtils.ROW_END);
+            }
+
+            sb.append("</tbody>");
+            sb.append("</table>");
+            sb.append("</body>");
+            sb.append("</html>");
+
+            FileUtils.writeStringToFile(l_exportFile, sb.toString(), "UTF-8");
+        } catch (IOException e) {
+            throw new LogDataExportToFileException("We were unable to write to the file " + l_exportFile.getPath());
+        }
+
+        return l_exportFile;
+    }
+
+    /**
+     * Exports the current LogData to a standard JSON file. By default, the file will have an escape version of the Parse
+     * Definition as the name
+     *
+     * @return a JSON file containing the LogData
+     */
+    public File exportLogDataToJSON() throws LogDataExportToFileException {
+        T l_firstEntry = this.fetchFirst();
+
+        if (l_firstEntry != null) {
+            return exportLogDataToJSON(l_firstEntry.fetchHeaders(), l_firstEntry.getParseDefinition().fetchEscapedTitle() + "-export.json");
+        } else {
+            log.warn("No Log data to export. Please load the log data before re-attempting");
+            return null;
+        }
+    }
+
+    /**
+     * Exports the current LogData to a standard JSON file.
+     *
+     * @param in_jsonFileName a filename to store the JSON export
+     * @return a JSON file containing the LogData
+     */
+    public File exportLogDataToJSON(String in_jsonFileName) throws LogDataExportToFileException {
+        T l_firstEntry = this.fetchFirst();
+
+        if (l_firstEntry != null) {
+            return exportLogDataToJSON(l_firstEntry.fetchHeaders(), in_jsonFileName);
+        } else {
+            log.warn("No Log data to export. Please load the log data before re-attempting");
+            return null;
+        }
+    }
+
+    /**
+     * Exports the current LogData to an JSON file
+     *
+     * @param in_headerSet   A set of headers to be used as keys for exporting
+     * @param in_jsonFileName The file name to export
+     * @return a JSON file containing the LogData
+     * @throws LogDataExportToFileException If the file could not be exported
+     */
+    public File exportLogDataToJSON(Collection<String> in_headerSet, String in_jsonFileName)
+            throws LogDataExportToFileException {
+        File l_exportFile = LogParserFileUtils.createNewFile(in_jsonFileName);
+        List<Map<String, String>> jsonList = new ArrayList<>();
+        jsonList.addAll(this.getEntries().values().stream().map(StdLogEntry::fetchValueMapPrintable)
+                .collect(Collectors.toList()));
+
+        try {
+            ObjectMapper objectMapper = new ObjectMapper();
+            objectMapper.writeValue(l_exportFile,
+                    objectMapper.writerWithDefaultPrettyPrinter().writeValueAsString(jsonList));
+        } catch (IOException e) {
+            throw new LogDataExportToFileException("Encountered error while exporting the log data to a JSON file.", e);
+        }
+        return l_exportFile;
+    }
+
+    /**
+     * This method compares two LogData objects and returns the differences. The difference is map of
+     * LogDataComparisons. The values of the delta and the deltaRatio are negative if the frequency is decreasing or has
+     * been removed.
+     *
+     * @param in_logData A LogData
+     * @return A Map of LogDataComparisons containing the differences
+     */
+    public Map<String, LogDataComparison<T>> compare(LogData<T> in_logData) {
+        Map<String, LogDataComparison<T>> lr_diff = new HashMap<>();
+
+        for (String lt_key : this.getEntries().keySet()) {
+            if (!in_logData.getEntries().containsKey(lt_key)) {
+                lr_diff.put(lt_key, new LogDataComparison(this.get(lt_key), LogDataComparison.ChangeType.REMOVED,
+                        this.get(lt_key).getFrequence(), 0));
+            } else if (!in_logData.get(lt_key).getFrequence().equals(this.get(lt_key).getFrequence())) {
+
+                lr_diff.put(lt_key, new LogDataComparison(in_logData.get(lt_key), LogDataComparison.ChangeType.MODIFIED,
+                        this.get(lt_key).getFrequence(), in_logData.get(lt_key).getFrequence()));
+            }
+        }
+
+        for (String lt_key : in_logData.getEntries().keySet()) {
+            if (!this.getEntries().containsKey(lt_key)) {
+                lr_diff.put(lt_key, new LogDataComparison(in_logData.get(lt_key), LogDataComparison.ChangeType.NEW,
+                        0, in_logData.get(lt_key).getFrequence()));
+            }
+        }
+
+        return lr_diff;
+    }
+
+    /**
+     * returns the first entry in the log data
+     * @return a LogDataEntry, null if there are no entries
+     */
+    protected T fetchFirst() {
+         return this.getEntries().values().stream().findFirst().orElse(null);
+    }
+
+    /**
+     * Returns the definition with which this LogData was created
+     * @return a ParseDefinition Object. Null if there are no entries in the log data
+     */
+    public ParseDefinition fetchParseDefinition() {
+        var l_firstEntry = this.fetchFirst();
+        if (l_firstEntry ==null) {
+            return null;
+        }
+
+        return l_firstEntry.getParseDefinition();
+    }
+
+    /**
+     * Enriches the log data with the given values provided there are lines that match the query map
+     * @param in_queryMap A map definition entry and Matchers
+     * @param in_entryName The name of the entry to be added
+     * @param in_entryValue The value of the entry to be added
+     */
+    public void enrichData(Map<String, Matcher> in_queryMap, String in_entryName, String in_entryValue) {
+        //add the entry to the definition
+        fetchParseDefinition().addEntry(new ParseDefinitionEntry(in_entryName));
+
+        //Iterate over the entries
+        getEntries().entrySet().stream().filter(e -> e.getValue().matches(in_queryMap)).forEach(e -> {
+            e.getValue().put(in_entryName, in_entryValue);
+        });
+    }
+
+    /**
+     * Enriches the log data with the given values provided there are lines that match the query map
+     * @param in_queryMap A map definition entry and Matchers
+     * @param keyValueToEnrich A map of key value pairs to be added to the log data
+     */
+    public void enrichData(Map<String, Matcher> in_queryMap, Map<String, String> keyValueToEnrich) {
+
+        //Iterate over the entries
+        getEntries().entrySet().stream()
+                .filter(e -> e.getValue().matches(in_queryMap)).forEach(e -> {
+                    keyValueToEnrich.forEach((in_entryName, in_entryValue) -> {
+                        fetchParseDefinition().addEntry(
+                                new ParseDefinitionEntry(in_entryName));
+                        e.getValue().put(in_entryName, in_entryValue);
+                    });
+                });
+    }
+
+
+    /**
+     * Enriches the log data which have not been set with the given values
+     * @param in_entryName The name of the entry to be added
+     * @param in_entryValue The value of the entry to be added
+     */
+    public void enrichEmpty(String in_entryName, String in_entryValue) {
+        Map<String, Matcher> l_unsetSearchQuery = new HashMap<>();
+        l_unsetSearchQuery.put(in_entryName, Matchers.equalTo(""));
+
+        this.enrichData(l_unsetSearchQuery, in_entryName, in_entryValue);
     }
 }
